tests/elab/ok/record_lit/check_record_lit.pion
def foo: {x: Int, y: Bool} = {x=1, y=false};
