tests/elab/errors/field_proj/field_missing.pion
def error1 = {}.x;
def error2 = {z=0}.x;
def error3 = Int.x;
